[tool.poetry]
name = "conjuring"
version = "0.5.0"
description = "🐍🤖 Reusable global Invoke tasks that can be merged with local project tasks"
authors = ["W. Augusto Andreoli <andreoliwa@gmail.com>"]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/andreoliwa/conjuring"
documentation = "https://andreoliwa.github.io/conjuring/"
keywords = ["invoke", "tasks", "automation", "cli", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "*"
requests = "*"
typer = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"

# https://commitizen-tools.github.io/commitizen/bump/#configuration
version_files = [
    "pyproject.toml:^version"
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true

# https://commitizen-tools.github.io/commitizen/changelog/#configuration
changelog_file = "docs/CHANGELOG.md"
changelog_incremental = true

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
# https://beta.ruff.rs/docs/settings/#select
select = ["ALL"]

# https://beta.ruff.rs/docs/settings/#show-fixes
show-fixes = true

# https://beta.ruff.rs/docs/settings/#line-length
line-length = 120

# https://beta.ruff.rs/docs/settings/#target-version
target-version = "py39"

# https://beta.ruff.rs/docs/settings/#src
src = ["src"]

# https://beta.ruff.rs/docs/settings/#ignore
ignore = [
    "ANN101", # Missing type annotation for ? in method
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in ?
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "ERA", # https://beta.ruff.rs/docs/rules/#eradicate-era
    "FBT001", # Boolean positional arg in function definition
    "FBT002", # Boolean default value in function definition
    "FBT003", # Boolean positional value in function call
    "TD002", # Missing author https://beta.ruff.rs/docs/rules/#flake8-todos-td
    "TD003", # Missing issue link on the line following this
]

# https://beta.ruff.rs/docs/settings/#per-file-ignores
[tool.ruff.per-file-ignores]
# D100 Missing docstring in public module
# D103 Missing docstring in public function
# D104 Missing docstring in public package
# S101 Use of ? detected https://beta.ruff.rs/docs/rules/?q=S101
"tests/**" = ["D100", "D103", "D104", "S101"]

# https://beta.ruff.rs/docs/rules/#flake8-quotes-q
[tool.ruff.flake8-quotes]
inline-quotes = "double"

# https://beta.ruff.rs/docs/rules/#mccabe-c90
[tool.ruff.mccabe]
# https://beta.ruff.rs/docs/settings/#max-complexity
max-complexity = 10
